and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

12th November 2002 Peter Gumplinger (op-V04-01-01)
                Fix calculation of polarization on dielectric dielectric
                interfaces; bug report #427
28th March 2002 Peter Gumplinger (op-V04-00-01)
                Add public inline method GetStatus and make enum 
                G4OpBoundaryProcessStatus public in G4OpBoundaryProcess.hh
18th October 2001 Peter Gumplinger (op-V03-02-01)
              Avoid warnings on Linux (gcc-2.95.2) compiler
- G4OpRayleigh.cc: remove unused variable 'aMaterial' in PostStepDoIt and
                   'no_unit' in RayleighAttenuationLengthGenerator
- G4OpBoundaryProcess.cc: moved definition of E2_perp, E2_parl, E2_total
                          outside IF-statement
31st August 2001 Peter Gumplinger (op-V03-02-00)
- G4OpRayleigh.hh, G4OpBoundary.hh and G4OpAbsorption.hh: changed processName
                   to 'OpRayleigh', 'OpBoundary' and 'OpAbsorption' respectively

30th January 2001 Peter Gumplinger (op-V03-00-05)
- G4OpRayleigh.cc: allow for positiv and negative CosTheta and force the
                   new momentum direction to be in the same plane as the
                   new and old polarization vectors
                   still bug report: 207

29th January 2001 Peter Gumplinger (op-V03-00-04)
- G4OpRayleigh.cc: fix calculation of SinTheta from CosTheta
                   bug report: 207

23rd January 2001 Peter Gumplinger (op-V03-00-02)
- G4OpRayleigh.cc: Allow for Rayleigh scattering length to be defined for 
           arbitrary material through the use of G4MaterialPropertyTable.

5th October 2000  Peter Gumplinger (op-V02-00-02)